--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,64 @@
+body {
+    color: #333333
+}
+
+.sidenav {
+    height: 100%;
+    width: 160px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #4d4d4d;
+    overflow-x: hidden;
+    padding-top: 20px;
+}
+.sidenav a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color:white;
+    display: block;
+}
+
+.main-container {
+    margin-left: 160px; 
+}
+
+.header {
+    position: fixed;
+    display: block;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 90px;
+    color: #58ade3;
+    text-align: center;
+    z-index: 10;
+    font-size: 24px;
+    font-weight: 400;
+    margin-left: 160px; 
+    background-color: white;
+    padding-top: 20px;
+}
+
+.container-fluid{
+    margin-top: 90px;
+    background-color: #f5f5f5;
+    height: 100vh;
+}
+
 .footer {
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(66,66,93,1) 0%, rgba(0,212,255,1) 100%); 
+    background: #404040;
     color: white;
     text-align: center;
- }
+}
+
+@media screen and (max-height: 450px) {
+   .sidenav {padding-top: 15px;}
+   .sidenav a {font-size: 18px;}
+}
